hphp/test/quick/memoize_lsb/memoize_lsb_non_static.php.expectf
Fatal error: <<__MemoizeLSB>> can only be applied to static methods in %s on line 6
